# mnemonist

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SPECIFICATION.md  install.sh  justfile  llms.txt  mnemonist.toml  sr.yaml  teasr.toml
.github/workflows/: ci.yml  release.yml
.llmem/: MEMORY.md  feedback_prefer-rust.md
crates/llmem-cli/: Cargo.toml  README.md
crates/llmem-cli/src/: main.rs
crates/llmem-cli/tests/: integration.rs
crates/llmem-cli/tests/snapshots/: integration__snapshot_config_get_output.snap
crates/llmem-core/: Cargo.toml  README.md
crates/llmem-core/benches/: core_benchmarks.rs
crates/llmem-core/src/: config.rs  distance.rs  embed.rs  error.rs  index.rs  lib.rs  memory.rs  temporal.rs
crates/llmem-core/src/backend/: file.rs
crates/llmem-core/src/snapshots/: llmem_core__config__tests__snapshot_default_config_toml.snap
crates/llmem-core/tests/: validation.rs
crates/llmem-evals/: Cargo.toml
crates/llmem-evals/benches/: eval_benchmarks.rs
crates/llmem-evals/src/: dataset.rs  embedding.rs  harness.rs  lib.rs  quantization.rs  report.rs  search.rs
crates/llmem-index/: Cargo.toml  README.md
crates/llmem-index/benches/: ann_benchmarks.rs
crates/llmem-index/src/: code.rs  distance.rs  eval.rs  hnsw.rs  ivf.rs  lib.rs
crates/llmem-index/tests/: validation.rs
crates/llmem-quant/: Cargo.toml
crates/llmem-quant/src/: mse.rs  store.rs
crates/llmem-quant/tests/: validation.rs
crates/llmem-server/: Cargo.toml
crates/llmem-server/src/: main.rs
crates/mnemonist-cli/: Cargo.toml  README.md
crates/mnemonist-cli/src/: main.rs  self_update.rs
crates/mnemonist-cli/tests/: integration.rs
crates/mnemonist-cli/tests/snapshots/: integration__snapshot_config_get_output.snap  integration__snapshot_consolidate_dry_run_output.snap  integration__snapshot_forget_error_output.snap  integration__snapshot_init_output.snap  integration__snapshot_memorize_output.snap  integration__snapshot_note_output.snap  integration__snapshot_reflect_output.snap  integration__snapshot_remember_defer_output.snap  integration__snapshot_remember_output.snap
crates/mnemonist-core/: Cargo.toml  README.md
crates/mnemonist-core/benches/: ann_benchmarks.rs  core_benchmarks.rs  eval_benchmarks.rs  quant_benchmarks.rs
crates/mnemonist-core/src/: config.rs  error.rs  inbox.rs  index.rs  lib.rs  memory.rs  progress.rs  rerank.rs  temporal.rs
crates/mnemonist-core/src/ann/: code.rs  distance.rs  eval.rs  hnsw.rs  ivf.rs  mod.rs
crates/mnemonist-core/src/backend/: file.rs  mod.rs
crates/mnemonist-core/src/embed/: candle.rs  fast.rs  mod.rs
crates/mnemonist-core/src/evals/: dataset.rs  embedding.rs  harness.rs  longmemeval.rs  mod.rs  qa.rs  quantization.rs  report.rs  search.rs
crates/mnemonist-core/src/evals/bench/: latency_scaling.rs  longmemeval_qa.rs  mempalace_comparison.rs  mod.rs  storage_footprint.rs  temporal_retrieval.rs  vector_retrieval.rs
crates/mnemonist-core/src/quant/: codebook.rs  mse.rs  pack.rs  prod.rs  qjl.rs  rotation.rs  store.rs
crates/mnemonist-core/src/snapshots/: mnemonist_core__config__tests__snapshot_default_config_toml.snap  mnemonist_core__inbox__tests__snapshot_inbox_after_eviction.snap  mnemonist_core__inbox__tests__snapshot_inbox_json.snap  mnemonist_core__index__tests__snapshot_index_entry_line.snap  mnemonist_core__index__tests__snapshot_memory_index_rendered.snap  mnemonist_core__memory__tests__snapshot_frontmatter_yaml.snap  mnemonist_core__memory__tests__snapshot_memory_file_markdown.snap
crates/mnemonist-core/tests/: bench_smoke.rs  validation.rs
crates/mnemonist-core/tests/fixtures/: longmemeval_tiny.json
crates/mnemonist-evals/: Cargo.toml
crates/mnemonist-evals/benches/: eval_benchmarks.rs
crates/mnemonist-evals/src/: bench.rs  dataset.rs  embedding.rs  harness.rs  lib.rs  longmemeval.rs  qa.rs  quantization.rs
crates/mnemonist-evals/src/bench/: latency_scaling.rs  mempalace_comparison.rs  mod.rs  storage_footprint.rs  temporal_retrieval.rs  vector_retrieval.rs
crates/mnemonist-index/: Cargo.toml  README.md
crates/mnemonist-index/benches/: ann_benchmarks.rs
crates/mnemonist-index/src/: code.rs  distance.rs  eval.rs  hnsw.rs  ivf.rs  lib.rs
crates/mnemonist-index/tests/: validation.rs
crates/mnemonist-quant/: Cargo.toml  README.md
crates/mnemonist-quant/benches/: quant_benchmarks.rs
crates/mnemonist-quant/src/: codebook.rs  lib.rs  pack.rs  prod.rs  qjl.rs
crates/mnemonist-quant/tests/: validation.rs
crates/mnemonist-server/: Cargo.toml  README.md
crates/mnemonist-server/src/: main.rs
crates/mnemonist-server/src/snapshots/: mnemonist_server__tests__snapshot_health_no_context.snap  mnemonist_server__tests__snapshot_health_with_context.snap  mnemonist_server__tests__snapshot_reload.snap  mnemonist_server__tests__snapshot_search_empty.snap  mnemonist_server__tests__snapshot_search_with_results.snap
dataset/: README.md
docs/: benchmarks.md
docs/benchmarks/: bm25_baseline.json  rag_results.json  rag_results.md  results.json  results.txt
docs/benchmarks/rag_gold/: fsrc.jsonl  mnemonist.jsonl  saige.jsonl  sr.jsonl  teasr.jsonl
scripts/: bm25_baseline.py  get_data.sh  longmemeval_qa.py  rag_eval.py  validate.sh
skills/ai-memory/: SKILL.md
skills/llmem/: SKILL.md
skills/llmem/references/: cli-reference.md  configuration.md
skills/mnemonist/: SKILL.md
skills/mnemonist/references/: cli-reference.md  configuration.md
spec/: llmem.md  mnemonist.md
training/: README.md  pyproject.toml
training/prompts/code/: generate_code_pairs.md  generate_code_search.md  generate_code_similarity.md
training/prompts/memory/: generate_memory_files.md  generate_memory_queries.md  generate_temporal_scenarios.md
training/scripts/: generate_data.py  train_code_model.py  train_memory_model.py
training/src/datagen/: generate.py  validate.py
training/src/distill/: dataset.py  loss.py  trainer.py
training/src/export/: onnx_export.py
training/src/models/: code_encoder.py  memory_encoder.py  temporal.py
