[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/urmzd/llmem"
authors = ["urmzd"]
homepage = "https://github.com/urmzd/llmem"

[workspace.dependencies]
# Internal crates
llmem-core = { path = "crates/llmem-core", version = "0.4.0" }
llmem-index = { path = "crates/llmem-index", version = "0.4.0" }
llmem-quant = { path = "crates/llmem-quant", version = "0.4.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
tower = { version = "0.5", features = ["util"] }

# Filesystem
dirs = "6"
ignore = "0.4"

# Tree-sitter
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Embedding
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["json", "yaml"] }
