[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.4"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/urmzd/mnemonist"
authors = ["urmzd"]
homepage = "https://github.com/urmzd/mnemonist"

[workspace.dependencies]
# Internal crates
mnemonist-core = { path = "crates/mnemonist-core", version = "0.4.4" }
mnemonist-index = { path = "crates/mnemonist-index", version = "0.4.4" }
mnemonist-quant = { path = "crates/mnemonist-quant", version = "0.4.4" }
mnemonist-evals = { path = "crates/mnemonist-evals", version = "0.4.4" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
tower = { version = "0.5", features = ["util"] }

# Filesystem
dirs = "6"
ignore = "0.4"

# Embedding
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }

# Random
rand = "0.9"
rand_distr = "0.5"

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["json", "yaml"] }
