[workspace]
members = ["crates/mnemonist-core", "crates/mnemonist-cli"]
resolver = "2"

[workspace.package]
version = "0.8.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/urmzd/mnemonist"
authors = ["urmzd"]
homepage = "https://github.com/urmzd/mnemonist"

[workspace.dependencies]
# Internal crates
mnemonist-core = { path = "crates/mnemonist-core", version = "0.8.1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
tower = { version = "0.5", features = ["util"] }

# Filesystem
dirs = "6"
ignore = "0.4"

# Embedding — candle (Metal/CUDA)
candle-core = { version = "0.10" }
candle-nn = { version = "0.10" }
candle-transformers = { version = "0.10" }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", features = ["tokio"] }

# Parallelism
rayon = "1.10"

# Random
rand = "0.9"
rand_distr = "0.5"

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["json", "yaml"] }
