[package]
name = "llmem"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "CLI tool for llmem — manage AI agent memory"
readme = "README.md"
keywords = ["ai", "memory", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "llmem"
path = "src/main.rs"

[dependencies]
llmem-core = { workspace = true }
llmem-index = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
insta = { workspace = true }
