[package]
name = "llmem-core"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Core types and operations for llmem — the open standard for AI agent memory"
readme = "README.md"
keywords = ["ai", "memory", "agent", "llm"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
