[package]
name = "llmem-core"
version = "0.4.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Core types and operations for llmem — the open standard for AI agent memory"
readme = "README.md"
keywords = ["ai", "memory", "agent", "llm"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
fastembed = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
