[package]
name = "llmem-index"
version = "0.4.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "ANN index implementations for llmem — HNSW, IVF-Flat, and pluggable trait"
readme = "README.md"
keywords = ["ai", "memory", "hnsw", "ann", "vector-search"]
categories = ["algorithms", "development-tools"]

[dependencies]
llmem-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ignore = { workspace = true }
tree-sitter = { workspace = true }

# Tree-sitter grammars (optional features)
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }

[features]
default = ["lang-rust", "lang-python", "lang-javascript", "lang-go"]
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-javascript = ["dep:tree-sitter-javascript", "dep:tree-sitter-typescript"]
lang-go = ["dep:tree-sitter-go"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "ann_benchmarks"
harness = false
