[package]
name = "llmem-quant"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "TurboQuant vector quantization for llmem — near-optimal MSE and inner-product quantizers"
readme = "README.md"
keywords = ["quantization", "vector", "compression", "embedding", "turboquant"]
categories = ["algorithms", "compression"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = "0.9"
rand_distr = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
