[package]
name = "llmem-server"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "RAG HTTP server for llmem — semantic search over AI agent memory"
readme = "README.md"
keywords = ["ai", "memory", "rag", "server"]
categories = ["web-programming::http-server", "development-tools"]

[[bin]]
name = "llmem-server"
path = "src/main.rs"

[dependencies]
llmem-core = { workspace = true }
llmem-index = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tower = "0.5"
tempfile = { workspace = true }
http-body-util = "0.1"
http = "1"
