[package]
name = "mnemonist"
version = "0.8.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "CLI tool for mnemonist — manage AI agent memory"
readme = "README.md"
keywords = ["ai", "memory", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mnemonist"
path = "src/main.rs"

[dependencies]
mnemonist-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ureq = { version = "3", features = ["json"] }

[features]
default = []
accelerate = ["mnemonist-core/accelerate"]
cuda = ["mnemonist-core/cuda"]

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
insta = { workspace = true }
