[package]
name = "mnemonist-core"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Core types and operations for mnemonist — the open standard for AI agent memory"
readme = "README.md"
keywords = ["ai", "memory", "agent", "llm"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub", "dep:rayon"]
accelerate = ["candle", "candle-core/accelerate"]
cuda = ["candle", "candle-core/cuda"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
