[package]
name = "mnemonist-evals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Evaluation metrics and harness for mnemonist — search quality, embedding quality, quantization"
keywords = ["ai", "evaluation", "metrics", "embedding", "retrieval"]
categories = ["development-tools::testing", "algorithms"]

[dependencies]
mnemonist-core = { workspace = true }
mnemonist-index = { workspace = true, optional = true }
mnemonist-quant = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
clap = { workspace = true, optional = true }

[features]
default = ["index", "quant"]
index = ["dep:mnemonist-index"]
quant = ["dep:mnemonist-quant"]
bench-cli = ["dep:clap", "index", "quant"]
candle = ["mnemonist-core/candle"]
accelerate = ["candle", "mnemonist-core/accelerate"]
cuda = ["candle", "mnemonist-core/cuda"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }

[[bin]]
name = "mnemonist-bench"
path = "src/bin/bench.rs"
required-features = ["bench-cli"]

[[bench]]
name = "eval_benchmarks"
harness = false
