[package]
name = "mnemonist-index"
version = "0.4.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "ANN index implementations for mnemonist — HNSW, IVF-Flat, and pluggable trait"
readme = "README.md"
keywords = ["ai", "memory", "hnsw", "ann", "vector-search"]
categories = ["algorithms", "development-tools"]

[dependencies]
mnemonist-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "ann_benchmarks"
harness = false
